--- a/02-basic-python/lecture-02-notebook.ipynb
+++ b/02-basic-python/lecture-02-notebook.ipynb
@@ -4,11 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Data Science - Lecture 2 - Notebooks and Python Basics\n",
+    "# Introduction to Data Science. Lecture 2: Notebooks and Python Basics\n",
     "*COMP 5360 / MATH 4100, University of Utah, http://datasciencecourse.net/*\n",
     "\n",
-    "Welcome to your first Jupyter notebook! This will be our main working environment for this class.\n",
-    "\n",
+    "Welcome to your first Jupyter notebook! This will be our main working environment for this class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Jupyter Notebook Basics\n",
     "\n",
     "First, let's get familiar with Jupyter Notebooks. \n",
@@ -23,7 +28,7 @@
     "\n",
     "If you want to read up on Notebooks in details check out the [excellent documentation](http://jupyter-notebook.readthedocs.io/en/latest/notebook.html).\n",
     "\n",
-    "The most interesting aspect of notebooks, however, is that we can write code in the cells cells. You can use [many different programming languages](https://github.com/jupyter/jupyter/wiki/Jupyter-kernels) in Jupyter notebooks, but we'll stick to Python. So, let's try it out:\n"
+    "The most interesting aspect of notebooks, however, is that we can write code in the cells. You can use [many different programming languages](https://github.com/jupyter/jupyter/wiki/Jupyter-kernels) in Jupyter notebooks, but we'll stick to Python. So, let's try it out:"
    ]
   },
   {
@@ -89,7 +94,7 @@
    "source": [
     "These variables are now available to all cell below or above **if you executed the cell**. In practice, you should never rely on a variable from a lower cell in an earlier cell. \n",
     "\n",
-    "If you make a change to a cell, you need to execute it again. You can also batch-executed multiple cells using the \"Cell\" menue in the toolbar. \n",
+    "If you make a change to a cell, you need to execute it again. You can also batch-executed multiple cells using the \"Cell\" menu in the toolbar. \n",
     "\n",
     "Let's do something with the variables we just defined:"
    ]
@@ -116,7 +121,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the previous cell, we've [concatenated a couple of strings](https://docs.python.org/3.5/tutorial/introduction.html#strings) to produce one longer string using the `+` operator. Also, we had to call the `str()` function to get [string representations of these variables](https://docs.python.org/3.5/library/stdtypes.html#str)."
+    "In the previous cell, we've [concatenated a couple of strings](https://docs.python.org/3.5/tutorial/introduction.html#strings) to produce one longer string using the `+` operator. Also, we had to call the `str()` function to get [string representations of these variables](https://docs.python.org/3.5/library/stdtypes.html#str).\n",
+    "\n",
+    "An alternative way to do this is not to concatenate the string but to pass each variable in as a separate arguemtn to the print function: "
    ]
   },
   {
@@ -142,7 +149,12 @@
    "source": [
     "## Modes\n",
     "\n",
-    "Notebooks have two modes, a **command mode** and **edit mode**. You can see which mode you're in by the color of the cell: green means edit mode, blue means command mode. Many operations depend on your mode. You can switch into edit mode with \"Enter\", and get out of it with \"Escape\". \n",
+    "Notebooks have two modes, a **command mode** and **edit mode**. You can see which mode you're in by the color of the cell: \n",
+    " * **green** means edit mode, \n",
+    " * **blue** means command mode. \n",
+    " \n",
+    "Many operations depend on your mode. You can switch into edit mode with \"Enter\", and get out of it with \"Escape\".\n",
+    "\n",
     "\n",
     "## Shortucts\n",
     "\n",
@@ -157,9 +169,14 @@
     "**`a`** adds a cell before the current cell.  \n",
     "**`b`** adds a cell after the current cell.  \n",
     "**`dd`** deletes a cell.  \n",
-    "**`m`** as in **m**markdown, switches a cell to markdown mode.  \n",
-    "**`y`** as in p**y**thon switches a cell to code.  \n",
-    "\n",
+    "**`m`** as in **m**arkdown, switches a cell to markdown mode.  \n",
+    "**`y`** as in p**y**thon switches a cell to code.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Kernels\n",
     "\n",
     "When you [run code](http://jupyter-notebook.readthedocs.io/en/latest/examples/Notebook/Running%20Code.html), the code is actually executed in a **kernel**. You can do bad thinks to a kernel: you can make it stuck in an endless loop, crash it, corrupt it, etc. And you probably will do all of these things :). So sometimes you might have to interrupt your kernel or restart it. Use the \"Kernel\" menu to restart the kernel, re-run your notebook, etc.\n",
@@ -179,7 +196,7 @@
     "collapsed": true
    },
    "source": [
-    "### Exercise: Creating Cells, Executing Code\n",
+    "### Exercise 2: Creating Cells, Executing Code\n",
     "\n",
     "1. Create a new code cell below where you define variables containing your name, your age in years, and your major.\n",
     "2. Create another cell that uses these variables and prints a concatenated string stating your name, major, and your age in years, months, and days (assuming today is your birthday ;)). The output should look like that:\n",
@@ -203,7 +220,11 @@
     "\n",
     "$f(x) = x^2 + 3$\n",
     "\n",
-    "In programming, functions can do exactly this, but are also used to execute \"subroutines\", i.e., to execute pieces of code in various order and under various conditions. Functions in programming are very important for structuring and modularizing code. In computer science, functions are also called \"procedures\" and \"methods\" (there are subtle distinctions, but nothing we need to worry about at this time). The following Python function, for example, provides the output of the above defined function for every valid input: \n"
+    "In programming, functions can do exactly this, but are also used to execute \"subroutines\", i.e., to execute pieces of code in various order and under various conditions. Functions in programming are very important for structuring and modularizing code. \n",
+    "\n",
+    "In computer science, functions are also called \"procedures\" and \"methods\" (there are subtle distinctions, but nothing we need to worry about at this time). \n",
+    "\n",
+    "The following Python function, for example, provides the output of the above defined function for every valid input: "
    ]
   },
   {
@@ -273,22 +294,27 @@
     "\n",
     "The second line does the actual computation and assigns it to a **local variable** called `result`. \n",
     "\n",
-    "The third line uses the `return` keyword to return the result variable. Functions have a return value, that we can assign to a variable. For example, here we could write: \n",
+    "The third line uses the `return` keyword to return the result variable. Functions can have a return value that we can assign to a variable. For example, here we could write: \n",
     "\n",
     "```python\n",
     "my_result = f(10)\n",
     "``` \n",
     "\n",
-    "Which would assign the return value of the function to the variable `my_result`.\n",
-    "\n",
+    "Which would assign the return value of the function to the variable `my_result`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Note that the lines of code that belong to a function are **intended by four spaces** (you can hit tab to intend, but it will be converted to four spaces). Python defines the scope of a function using intendation. Many other programming languages use curly brackets {} to do this. A function is ended by a new line.\n",
     "\n",
-    "For example, the same function wouldn't work like this:\n"
+    "For example, the same function wouldn't work like this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,15 +345,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-9-acac10b7d5db>, line 4)",
+     "evalue": "unexpected indent (<ipython-input-8-acac10b7d5db>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-acac10b7d5db>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return result\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-acac10b7d5db>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return result\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
@@ -349,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +408,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-c847ea57cd11>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# If we try to use the function_scope variable outside of the function, we will find that it is not defined.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# This will throw a NameError, because Python doesn't know about that variable here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Outside function: \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfunction_scope\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-c847ea57cd11>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# If we try to use the function_scope variable outside of the function, we will find that it is not defined.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# This will throw a NameError, because Python doesn't know about that variable here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Outside function: \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfunction_scope\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'function_scope' is not defined"
      ]
     }
@@ -406,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -430,12 +456,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is generally not considered good practice - functions should rely on their input parameters. Otherwise it can easily lead to side effects. This would be the better approach: "
+    "This is generally **not considered good practice** - functions should rely on their input parameters. Otherwise it can easily lead to side effects. This would be the better approach: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +503,7 @@
    ],
    "source": [
     "def scope_test():\n",
-    "    # Think long and hard before you do this - generally you shoudln't\n",
+    "    # Think long and hard before you do this - generally you shoudln't. I have never.\n",
     "    global global_scope\n",
     "    global_scope = \"defined in the function, global scope\"\n",
     "    # Within the function, we can use the variable we have defined\n",
@@ -492,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise: Functions\n",
+    "### Exercise 3: Functions\n",
     "Write a function that \n",
     " * takes two numerical variables\n",
     " * multiplies them with each other\n",
