Added reset_index info

--- a/06-loading-data-dataframes/06-exercise-solutions.ipynb
+++ b/06-loading-data-dataframes/06-exercise-solutions.ipynb
@@ -769,19 +769,19 @@
       "text/plain": [
        "Michael Jackson     True\n",
        "Madonna             True\n",
-       "The Beatles         True\n",
        "Shania Twain        True\n",
        "Various artists     True\n",
-       "Bon Jovi            True\n",
-       "Backstreet Boys     True\n",
+       "The Beatles         True\n",
        "Adele               True\n",
+       "Eagles              True\n",
+       "Backstreet Boys     True\n",
+       "Bon Jovi            True\n",
+       "Britney Spears      True\n",
        "Celine Dion         True\n",
+       "Whitney Houston     True\n",
        "Mariah Carey        True\n",
        "Pink Floyd          True\n",
-       "Eagles              True\n",
-       "Whitney Houston     True\n",
-       "Britney Spears      True\n",
-       "Dire Straits       False\n",
+       "Metallica          False\n",
        "Name: Artist, dtype: bool"
       ]
      },
