Added examples of json and xml

--- a/06-loading-data-dataframes/06-loading-data-dataframes.ipynb
+++ b/06-loading-data-dataframes/06-loading-data-dataframes.ipynb
@@ -291,7 +291,29 @@
     "\n",
     "Up to now, we've mainly used data that we've specified directly in code. This is, of course, not particularly scalable. We want to load data from files and eventually also connect to databases and APIs. \n",
     "\n",
-    "Data is often stored in structured file formats, such as CSV, JSON, or XML. We'll encounter all of these file formats in this class. The simplest (and least structured) is a CSV - comma separated values - file. CSV isn't a formal file format, rather it's a table represented as a text file where the cells are separated by a delimiter. Commonly, the first row represents the header. A delimiter can be a tab character, a semicolon, a colon, etc. \n",
+    "Data is often stored in structured file formats, such as CSV, JSON, or XML. We'll encounter all of these file formats in this class.\n",
+    "\n",
+    "JSON\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "    \"fruit\": \"Apple\",\n",
+    "    \"size\": \"Large\",\n",
+    "    \"color\": \"Red\"\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "XML\n",
+    "```xml\n",
+    "<note>\n",
+    "<to>Tove</to>\n",
+    "<from>Jani</from>\n",
+    "<heading>Reminder</heading>\n",
+    "<body>Don't forget me this weekend!</body>\n",
+    "</note>\n",
+    "```\n",
+    "\n",
+    "The simplest (and least structured) is a CSV - comma separated values - file. CSV isn't a formal file format, rather it's a table represented as a text file where the cells are separated by a delimiter. Commonly, the first row represents the header. A delimiter can be a tab character, a semicolon, a colon, etc. \n",
     "\n",
     "Many CSV files also have a special convention for dealing with text that could include the delimiter. The following text would be very hard to parse otherwise:\n",
     "```\n",
