Added solutions for the excercises

--- a/06-loading-data-dataframes/06-loading-data-dataframes.ipynb
+++ b/06-loading-data-dataframes/06-loading-data-dataframes.ipynb
@@ -3573,61 +3573,61 @@
      "data": {
       "text/plain": [
        "Michael Jackson                      5\n",
-       "The Beatles                          3\n",
-       "Shania Twain                         3\n",
-       "Various artists                      3\n",
        "Madonna                              3\n",
-       "Adele                                2\n",
+       "Shania Twain                         3\n",
+       "The Beatles                          3\n",
+       "Various artists                      3\n",
        "Backstreet Boys                      2\n",
-       "Whitney Houston                      2\n",
-       "Bon Jovi                             2\n",
-       "Pink Floyd                           2\n",
-       "Mariah Carey                         2\n",
-       "Celine Dion                          2\n",
-       "Eagles                               2\n",
+       "Adele                                2\n",
        "Britney Spears                       2\n",
-       "Tina Turner                          1\n",
-       "Simon & Garfunkel                    1\n",
-       "Meat Loaf                            1\n",
-       "Boston                               1\n",
-       "Cyndi Lauper                         1\n",
-       "Linkin Park                          1\n",
-       "Guns N' Roses                        1\n",
-       "Tracy Chapman                        1\n",
-       "Supertramp                           1\n",
-       "AC/DC                                1\n",
-       "Green Day                            1\n",
-       "Alanis Morissette                    1\n",
-       "James Horner                         1\n",
-       "Bob Marley & The Wailers             1\n",
+       "Mariah Carey                         2\n",
+       "Bon Jovi                             2\n",
+       "Eagles                               2\n",
+       "Pink Floyd                           2\n",
+       "Whitney Houston                      2\n",
+       "Celine Dion                          2\n",
        "Eminem                               1\n",
-       "Eric Clapton                         1\n",
-       "Ace of Base                          1\n",
-       "Whitney Houston / Various artists    1\n",
-       "Queen                                1\n",
-       "Def Leppard                          1\n",
-       "Norah Jones                          1\n",
-       "Phil Collins                         1\n",
-       "Bee Gees / Various artists           1\n",
-       "Lionel Richie                        1\n",
-       "TLC                                  1\n",
-       "Metallica                            1\n",
-       "Avril Lavigne                        1\n",
-       "George Michael                       1\n",
-       "Shakira                              1\n",
-       "Carole King                          1\n",
-       "Nirvana                              1\n",
-       "Prince & the Revolution              1\n",
-       "Dire Straits                         1\n",
-       "Bruce Springsteen                    1\n",
-       "Santana                              1\n",
-       "ABBA                                 1\n",
        "Fleetwood Mac                        1\n",
+       "ABBA                                 1\n",
+       "Alanis Morissette                    1\n",
+       "Tracy Chapman                        1\n",
        "Oasis                                1\n",
-       "Led Zeppelin                         1\n",
+       "Shakira                              1\n",
+       "Prince & the Revolution              1\n",
+       "AC/DC                                1\n",
+       "Bruce Springsteen                    1\n",
+       "Meat Loaf                            1\n",
+       "Bee Gees / Various artists           1\n",
+       "Santana                              1\n",
+       "Bob Marley & The Wailers             1\n",
+       "Eric Clapton                         1\n",
+       "Metallica                            1\n",
        "U2                                   1\n",
+       "Lionel Richie                        1\n",
+       "Avril Lavigne                        1\n",
+       "Green Day                            1\n",
+       "Cyndi Lauper                         1\n",
+       "Ace of Base                          1\n",
+       "Nirvana                              1\n",
+       "Boston                               1\n",
+       "Def Leppard                          1\n",
+       "Guns N' Roses                        1\n",
+       "Dire Straits                         1\n",
+       "Phil Collins                         1\n",
+       "Carole King                          1\n",
+       "Tina Turner                          1\n",
+       "Supertramp                           1\n",
        "Usher                                1\n",
+       "Linkin Park                          1\n",
+       "Queen                                1\n",
+       "James Horner                         1\n",
+       "George Michael                       1\n",
+       "Simon & Garfunkel                    1\n",
        "Spice Girls                          1\n",
+       "Whitney Houston / Various artists    1\n",
+       "Led Zeppelin                         1\n",
+       "TLC                                  1\n",
+       "Norah Jones                          1\n",
        "Name: Artist, dtype: int64"
       ]
      },
@@ -5157,7 +5157,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcbee209ba8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5941c8ac88>"
       ]
      },
      "execution_count": 63,
@@ -5196,7 +5196,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcbede29c88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f59418ad9e8>"
       ]
      },
      "execution_count": 64,
@@ -5235,7 +5235,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcbeddb41d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f5941847588>"
       ]
      },
      "execution_count": 65,
@@ -5276,7 +5276,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fcbedaf51d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f59416c6550>"
       ]
      },
      "execution_count": 66,
